2004-01-19  Duncan Mak  <duncan@ximian.com>

	* GraphicsPath.cs: Implemented. Still needs testing, though.
	Particular the PathPoints property, I ran into a P/Invoke problem,
	I need to first fix that before I can go on with the rest of the testing.

2004-01-13  Ravindra  <rkumar@novell.com>

	* Matrix.cs: Made the Matrix(IntPtr) constructor internal.
	Because default access is private, that makes it unusable
	by other classes.

2004-01-11  Duncan Mak  <duncan@ximian.com>

	* Matrix.cs (Matrix): Removed reference to GpRect/GpRectF.

2004-01-10  Ravindra  <rkumar@novell.com>

	* All Enums: Made serializable.

	* GraphicsPathIterator.cs: Implements IDisposable.

	* GraphicsState.cs: Inherits MarshalByRefObject.

2003-12-25  Duncan Mak  <duncan@ximian.com>

	* Matrix.cs (ToString): Cache the elements inside a local variable
	to avoid calling the Elements property repeatedly.

2003-12-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Blend.cs: fix array sizes in the constructors. Closes bug #51564.
	System.Web moves in mysterious ways.

2003-11-22  Duncan Mak  <duncan@ximian.com>

	* Matrix.cs: Rewrote to use GDI+ implementation, doing all the
	math in unmanaged code instead of doing it in C#.

2003-11-04  Miguel de Icaza  <miguel@ximian.com>

	* GraphicsPathIterator.cs: Do not make this protected.

2003-11-13  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* QualityMode.cs: Fixed typo
	* InterpolationMode.cs: Fixed typo
	* RegionData.cs: Fixed signatures, partially implemented
	* PathGradientBrush.cs: Fixed signatures
	* PathData.cs: Fixed signature, implemented
	* LinearGradientBrush.cs: Added missing MonoTODOs, fixed typo
	* GraphicsContainer.cs: Added private constructor
	* CustomLineCap.cs: Fixed typos, fixed inheritance, removed unneeded member

2003-11-11 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ColorBlend.cs (Positions): another one.

2003-11-11 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Blend.cs (Positions): recursion in prop.
