@@ -1,3 +1,7 @@
+2004-01-23  Duncan Mak  <duncan@ximian.com>
+
+	* graphics.c (GdipDrawPath): Implemented.
+
 2004-01-20  Ravindra <rkumar@novell.com>
 
 	* pen.c: Fixed bug #52811.
